--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.13",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
     "request": "^2.88.0"
   }
